--- a/Admin/public/index.html
+++ b/Admin/public/index.html
@@ -128,6 +128,12 @@
       padding: 0;
       font-size: 15px;
     }
+
+    .logo {
+      display: inline-block;
+      height: 50px;
+      vertical-align: middle;
+    }
   </style>
 </head>
 
