--- a/Admin/public/index.html
+++ b/Admin/public/index.html
@@ -135,6 +135,60 @@
       vertical-align: middle;
     }
 
+    .gu-transit {
+      z-index: 2;
+      box-shadow: 2px 10px 20px rgba(0, 0, 0, 0.24), 0 6px 6px rgba(0, 0, 0, 0.23);
+      height: 45px !important;
+      padding: 0 !important;
+      transition: .3s all;
+      cursor: pointer !important;
+    }
+
+    .gu-mirror {
+      display: none !important;
+    }
+
+    .BeerNumbers {
+      -webkit-order: 0;
+      -ms-flex-order: 0;
+      order: 0;
+      -webkit-flex: 0 2 auto;
+      -ms-flex: 0 2 auto;
+      flex: 0 2 auto;
+      -webkit-align-self: auto;
+      -ms-flex-item-align: auto;
+      align-self: auto;
+    }
+
+    .BeerListBlock {
+      -webkit-order: 0;
+      -ms-flex-order: 0;
+      order: 0;
+      -webkit-flex: 1 2 auto;
+      -ms-flex: 1 2 auto;
+      flex: 1 2 auto;
+      -webkit-align-self: auto;
+      -ms-flex-item-align: auto;
+      align-self: auto;
+    }
+
+    .BeerItem {
+      margin: 15px;
+      height: 30px;
+      align-items: center;
+    }
+
+    .number {
+      margin: 15px 0;
+      height: 30px;
+      padding: 4px;
+      font-weight: 600;
+    }
+
+    .number>span {
+      vertical-align: middle;
+    }
+
     .flex-container {
       display: -ms-flexbox;
       display: -webkit-flex;
@@ -145,9 +199,9 @@
       -webkit-flex-wrap: nowrap;
       -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
-      -webkit-justify-content: flex-start;
+      -webkit-justify-content: center;
       -ms-flex-pack: start;
-      justify-content: flex-start;
+      justify-content: center;
       -webkit-align-content: stretch;
       -ms-flex-line-pack: stretch;
       align-content: stretch;
@@ -156,18 +210,18 @@
       align-items: flex-start;
     }
 
-    .flex-item.beerNum {
+    /* .flex-item {
       -webkit-flex: 0 2 auto !important;
       -ms-flex: 0 2 auto !important;
       flex: 0 2 auto !important;
       margin-right: 30px;
     }
 
-    .flex-item.beerList {
+    .flex-item {
       -webkit-flex: 1 2 auto !important;
       -ms-flex: 1 2 auto !important;
       flex: 1 2 auto !important;
-    }
+    } */
 
     .flex-item:nth-child(1) {
       -webkit-order: 0;
